--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,3 +1,5 @@
+include(../cmake/StaticCodeAnalysis.cmake)
+
 string(REGEX REPLACE "([0-9]+)\\.[0-9]+(\\.[0-9]+)?(\\.[0-9]+)?" "\\1" COMPILER_VERSION_MAJOR ${CMAKE_CXX_COMPILER_VERSION})
 string(REGEX REPLACE "[0-9]+\\.([0-9]+)(\\.[0-9]+)?(\\.[0-9]+)?" "\\1" COMPILER_VERSION_MINOR ${CMAKE_CXX_COMPILER_VERSION})
 if (${CMAKE_CXX_COMPILER_VERSION} MATCHES "[0-9]+\\.[0-9]+\\.[0-9]+(\\.[0-9]+)?")
@@ -18,3 +20,10 @@ target_compile_definitions(platform_macros PUBLIC CPPPAL_TEST_CXX=${CPPPAL_CXX_S
 
 target_link_libraries(platform_macros CppPAL)
 
+if("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
+	cpppal_enable_clang_tidy(platform_macros)
+endif()
+
+if("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC" AND ${CMAKE_GENERATOR} MATCHES "Visual Studio")
+	cpppal_enable_core_guideline_checker(platform_macros "")
+endif()
