--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,18 +20,23 @@ add_subdirectory(external/abseil EXCLUDE_FROM_ALL)
 # C++20 formatting support
 add_subdirectory(external/fmt EXCLUDE_FROM_ALL)
 
+# C++23 expected proposal
+add_subdirectory(external/expected-lite EXCLUDE_FROM_ALL)
+
 add_library(CppPAL INTERFACE)
 target_include_directories(CppPAL INTERFACE "${CMAKE_CURRENT_SOURCE_DIR}/include")
 target_sources(CppPAL INTERFACE
 	"${CMAKE_CURRENT_SOURCE_DIR}/include/cpppal/any.h"
 	"${CMAKE_CURRENT_SOURCE_DIR}/include/cpppal/compiler.h"
+	"${CMAKE_CURRENT_SOURCE_DIR}/include/cpppal/expected.h"
 	"${CMAKE_CURRENT_SOURCE_DIR}/include/cpppal/optional.h"
 	"${CMAKE_CURRENT_SOURCE_DIR}/include/cpppal/span.h"
 	"${CMAKE_CURRENT_SOURCE_DIR}/include/cpppal/string_view.h"
 )
-target_link_libraries(CppPAL INTERFACE absl::any absl::bad_any_cast absl::container absl::optional)
+target_link_libraries(CppPAL INTERFACE absl::any absl::bad_any_cast absl::container absl::optional nonstd::expected-lite)
 
 # Only build tests when building as standalone project
 if("^${CMAKE_SOURCE_DIR}$" STREQUAL "^${PROJECT_SOURCE_DIR}$")
+	add_subdirectory(external/catch2 EXCLUDE_FROM_ALL)
 	add_subdirectory(tests)
 endif()
