--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -7,14 +7,15 @@ else()
 endif()
 message(STATUS "${CMAKE_CXX_COMPILER_ID}: ${COMPILER_VERSION_MAJOR}.${COMPILER_VERSION_MINOR}.${COMPILER_VERSION_PATCHLEVEL}")
 
-add_library(platform_macros STATIC
+add_executable(cpppal_tests
+	expected.cpp
+	main.cpp
 	platform_macros.cpp
-)
+ "main.cpp")
 
 math(EXPR COMPILER_VERSION "100*${COMPILER_VERSION_MAJOR}+${COMPILER_VERSION_MINOR}")
-target_compile_definitions(platform_macros PUBLIC CPPPAL_TEST_COMP_VERSION=${COMPILER_VERSION})
+target_compile_definitions(cpppal_tests PUBLIC CPPPAL_TEST_COMP_VERSION=${COMPILER_VERSION})
+target_compile_definitions(cpppal_tests PUBLIC CPPPAL_TEST_CXX=${CPPPAL_CXX_STANDARD})
 
-target_compile_definitions(platform_macros PUBLIC CPPPAL_TEST_CXX=${CPPPAL_CXX_STANDARD})
-
-target_link_libraries(platform_macros CppPAL)
+target_link_libraries(cpppal_tests CppPAL Catch2)
 
