--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,7 @@ project(CppPAL VERSION 0.1.0.0 LANGUAGES CXX)
 # As MSVC is not able to define the minimum level, software needs
 # to implement per feature detection
 set(CPPPAL_CXX_STANDARD "14" CACHE STRING "C++ standard")
-set_property(CACHE CPPPAL_CXX_STANDARD PROPERTY STRINGS "14" "17" "20")
+set_property(CACHE CPPPAL_CXX_STANDARD PROPERTY STRINGS "14" "17" "20" "23")
 message(STATUS "Using C++${CPPPAL_CXX_STANDARD}")
 
 # Select C++ version
@@ -26,6 +26,7 @@ add_subdirectory(external/fmt EXCLUDE_FROM_ALL)
 add_subdirectory(external/expected-lite EXCLUDE_FROM_ALL)
 
 add_library(CppPAL INTERFACE)
+target_compile_features(CppPAL INTERFACE cxx_std_${CPPPAL_CXX_STANDARD})
 target_include_directories(CppPAL INTERFACE "${CMAKE_CURRENT_SOURCE_DIR}/include")
 target_sources(CppPAL INTERFACE
 	"${CMAKE_CURRENT_SOURCE_DIR}/include/cpppal/any.h"
@@ -35,7 +36,7 @@ target_sources(CppPAL INTERFACE
 	"${CMAKE_CURRENT_SOURCE_DIR}/include/cpppal/span.h"
 	"${CMAKE_CURRENT_SOURCE_DIR}/include/cpppal/string_view.h"
 )
-target_link_libraries(CppPAL INTERFACE absl::any absl::bad_any_cast absl::container absl::optional nonstd::expected-lite)
+target_link_libraries(CppPAL INTERFACE absl::any absl::bad_any_cast absl::optional nonstd::expected-lite)
 
 # Only build tests when building as standalone project
 if("^${CMAKE_SOURCE_DIR}$" STREQUAL "^${PROJECT_SOURCE_DIR}$")
